fix footer when page too short

--- a/History_Trails/src/main/resources/static/myStyle.css
+++ b/History_Trails/src/main/resources/static/myStyle.css
@@ -3,6 +3,9 @@ body {
     background-color: #dedede;
     color: #333;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 * {box-sizing: border-box;}
