--- a/History_Trails/src/main/resources/static/navbar.css
+++ b/History_Trails/src/main/resources/static/navbar.css
@@ -90,9 +90,9 @@
     width: 100%;
     background-color: black;
     padding: 10px 30px;
-    margin: 30px 0 0;
     display:block;
     bottom: 0;
+    margin-top: auto;
 }
 
 .footer h3{
